css/changes.css
body {
	background-image: url(images/soft_wallpaper/soft_wallpaper.png);
}
.container {
	min-height: 100%;
}
.navbar {
	min-height: 150px;	
	width: 100%;
	border-bottom: 1pt solid saddlebrown;
	border-radius: 0;
}

.navbar-brand {
	padding: 0px 15px;
	height: 150px;
	line-height: 150px;
	color: sienna;
}
.navbar-nav {
	margin-top: 30px;
	padding: 9px 10px;

}
.nav {
	margin: 50px 0px;
	font-size: 28pt;
}
#nav-color {
	color: saddlebrown;
	font-family: 'Abril Fatface', sans-serif;
}
.footer {
	border-top: 1pt solid saddlebrown;
}
.footer-text {
	text-align: center;
}
.jumbotron {
	border: 1pt solid saddlebrown;
	min-height: 100%;
}
#background {
	background-image: url(images/ricepaper_v3/ricepaper_v3.png);
}

